# PyRival

./: .gitignore  pyproject.toml
.github/workflows/: verify.yaml
pyrival/algebra/: mod_sqrt.py
verify/library-checker/convolution/: convolution_mod.py
verify/library-checker/data-structure/: point_add_range_sum.py  staticrmq.py  unionfind.DisjoinSetUnion.py  unionfind.UnionFind.py
verify/library-checker/graph/: scc.py  shortest_path.py
verify/library-checker/number-theory/: discrete_log_mod.py  enumerate_primes.py  factorize.py  primality_test.py  primitive_root.py  sqrt_mod.py
verify/library-checker/other/: kth_term_of_linearly_recurrent_sequence.py  longest_increasing_subsequence.py  two_sat.py
verify/library-checker/string/: suffixarray.py  zalgorithm.py
verify/library-checker/tree/: lca.py
